--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>漫购商城</title>
     <script charset="utf-8">
       document.getElementsByTagName('html')[0].style.fontSize = window.screen.width/10+'px';
