--- a/index.html
+++ b/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>漫购商城</title>
-    <script charset="utf-8">
-      document.getElementsByTagName('html')[0].style.fontSize = window.screen.width/10+'px';
-    </script>
-    <link rel="icon" href="./static/logo.png">
-  </head>
-  <body>
-    <div id="app-box"></div>
-    <!-- built files will be auto injected -->
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=yGgv4MB8lb5scmrfKIzD2ORG0B9X4uu9"></script>
-    <script>
-      //获取当前定位经纬度
-      var flag = false;
-      if (!flag){
-        var geolocation = new BMap.Geolocation();
-        geolocation.getCurrentPosition(function(r){
-          if(this.getStatus() == BMAP_STATUS_SUCCESS){
-            var cP = {
-              lng:r.point.lng,
-              lat:r.point.lat
-            }
-            var c = JSON.stringify(cP)
-            localStorage.setItem('CurrentPosition',c)
-            flag = true
-          }
-          else {
-//          alert('failed'+this.getStatus());
-          }
-        })
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <title>漫购商城</title>
+  <script charset="utf-8">
+    document.getElementsByTagName('html')[0].style.fontSize = window.screen.width / 10 + 'px'
+  </script>
+  <link rel="icon" href="./static/logo.png">
+</head>
+<body>
+<div id="app-box"></div>
+<!-- built files will be auto injected -->
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=yGgv4MB8lb5scmrfKIzD2ORG0B9X4uu9"></script>
+<script>
+  //获取当前定位经纬度
+  if (!localStorage.getItem('MGCurrentPosition')) {
+    var geolocation = new BMap.Geolocation()
+    geolocation.getCurrentPosition(function (r) {
+      if (this.getStatus() == BMAP_STATUS_SUCCESS) {
+        var cP = {
+          lng: r.point.lng,
+          lat: r.point.lat
+        }
+        var c = JSON.stringify(cP)
+        localStorage.setItem('MGCurrentPosition', c)
       }
-    </script>
-  </body>
+    })
+  }
+
+</script>
+</body>
 </html>
