--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=yGgv4MB8lb5scmrfKIzD2ORG0B9X4uu9"></script>
 <script>
   //获取当前定位经纬度
-  if (!localStorage.getItem('MGCurrentPosition')) {
     var geolocation = new BMap.Geolocation()
     geolocation.getCurrentPosition(function (r) {
       if (this.getStatus() == BMAP_STATUS_SUCCESS) {
@@ -25,11 +24,9 @@
           lat: r.point.lat
         }
         var c = JSON.stringify(cP)
-        localStorage.setItem('MGCurrentPosition', c)
+        localStorage.setItem('m-CurrentPosition', c)
       }
     })
-  }
-
 </script>
 </body>
 </html>
