--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="screen-orientation" content="portrait"/>
+  <meta name="x5-orientation" content="portrait">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="full-screen" content="yes">
+  <meta name="x5-fullscreen" content="true">
   <title>漫购商城</title>
   <script charset="utf-8">
     document.getElementsByTagName('html')[0].style.fontSize = window.screen.width / 10 + 'px'
