--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
   <link rel="icon" href="./static/logo.png">
 </head>
 <body>
-<div id="app-box"></div>
+<div id="app-box">
+  <router-view></router-view>
+</div>
 <!-- built files will be auto injected -->
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=yGgv4MB8lb5scmrfKIzD2ORG0B9X4uu9"></script>
 <script>
-  //获取当前定位经纬度
+  // 获取当前定位经纬度
     var geolocation = new BMap.Geolocation()
     geolocation.getCurrentPosition(function (r) {
       if (this.getStatus() == BMAP_STATUS_SUCCESS) {
