--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
   <router-view></router-view>
 </div>
 <!-- built files will be auto injected -->
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=yGgv4MB8lb5scmrfKIzD2ORG0B9X4uu9"></script>
+<!--<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=yGgv4MB8lb5scmrfKIzD2ORG0B9X4uu9"></script>-->
 <script>
   // 获取当前定位经纬度
-    var geolocation = new BMap.Geolocation()
-    geolocation.getCurrentPosition(function (r) {
-      if (this.getStatus() == BMAP_STATUS_SUCCESS) {
-        var cP = {
-          lng: r.point.lng,
-          lat: r.point.lat
-        }
-        var c = JSON.stringify(cP)
-        localStorage.setItem('m-CurrentPosition', c)
-      }
-    })
+//    var geolocation = new BMap.Geolocation()
+//    geolocation.getCurrentPosition(function (r) {
+//      if (this.getStatus() == BMAP_STATUS_SUCCESS) {
+//        var cP = {
+//          lng: r.point.lng,
+//          lat: r.point.lat
+//        }
+//        var c = JSON.stringify(cP)
+//        localStorage.setItem('m-CurrentPosition', c)
+//      }
+//    })
 </script>
 </body>
 </html>
